RESOLVED FIXED140286
AX: Crash at -[WebAccessibilityObjectWrapperBase accessibilityTitle] + 31
https://bugs.webkit.org/show_bug.cgi?id=140286
Summary AX: Crash at -[WebAccessibilityObjectWrapperBase accessibilityTitle] + 31
chris fleizach
Reported 2015-01-08 23:26:51 PST
rashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000000 VM Regions Near 0: --> __TEXT 00000001062d0000-00000001062d1000 [ 4K] r-x/rwx SM=COW /System/Library/Frameworks/WebKit.framework/Versions/A/XPCServices/com.apple.WebKit.WebContent.xpc/Contents/MacOS/com.apple.WebKit.WebContent Application Specific Information: Bundle controller class: BrowserBundleController Process Model: Multiple Web Processes Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.WebCore 0x00007fff99103aef -[WebAccessibilityObjectWrapperBase accessibilityTitle] + 31 1 com.apple.AppKit 0x00007fff90a901d2 -[NSAccessibilityAttributeAccessorInfo _getAttributeValueForObject:] + 348 2 com.apple.AppKit 0x00007fff90a90452 -[NSAccessibilityAttributeAccessorInfo getAttributeValue:forObject:] + 58 3 com.apple.AppKit 0x00007fff90a8bb44 _NSAccessibilityEntryPointValueForAttribute + 1034 4 com.apple.AppKit 0x00007fff908ba3ac -[NSObject(NSAccessibilityInternal) _accessibilityValueForAttribute:clientError:] + 266 5 com.apple.AppKit 0x00007fff908bfd39 CopyAppKitUIElementAttributeValueNoCatch + 50 6 com.apple.AppKit 0x00007fff908be9bf CopyMultipleAttributeValues + 333 7 com.apple.HIServices 0x00007fff8c559ce5 _AXXMIGCopyMultipleAttributeValues + 295 8 com.apple.HIServices 0x00007fff8c5656a3 _XCopyMultipleAttributeValues + 594 9 com.apple.HIServices 0x00007fff8c5411bb mshMIGPerform + 199 10 com.apple.CoreFoundation 0x00007fff952538d9 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE1_PERFORM_FUNCTION__ + 41 11 com.apple.CoreFoundation 0x00007fff9525384b __CFRunLoopDoSource1 + 475 12 com.apple.CoreFoundation 0x00007fff952453c7 __CFRunLoopRun + 2375 13 com.apple.CoreFoundation 0x00007fff95244838 CFRunLoopRunSpecific + 296 14 com.apple.HIToolbox 0x00007fff99a9c43f RunCurrentEventLoopInMode + 235 15 com.apple.HIToolbox 0x00007fff99a9c1ba ReceiveNextEventCommon + 431 16 com.apple.HIToolbox 0x00007fff99a9bffb _BlockUntilNextEventMatchingListInModeWithFilter + 71 17 com.apple.AppKit 0x00007fff905956d1 _DPSNextEvent + 964 18 com.apple.AppKit 0x00007fff90594e80 -[NSApplication nextEventMatchingMask:untilDate:inMode:dequeue:] + 194 19 com.apple.AppKit 0x00007fff90588e23 -[NSApplication run] + 594 20 com.apple.AppKit 0x00007fff905742d4 NSApplicationMain + 1832 21 libxpc.dylib 0x00007fff97cdeef2 _xpc_objc_main + 793 22 libxpc.dylib 0x00007fff97ce0a9d xpc_main + 490 <rdar://problem/19362835>
Attachments
patch (6.70 KB, patch)
2015-01-08 23:29 PST, chris fleizach
no flags
chris fleizach
Comment 1 2015-01-08 23:29:16 PST
Mario Sanchez Prada
Comment 2 2015-01-09 02:45:50 PST
Comment on attachment 244331 [details] patch I don't think this error in the EFL port is related at all :), so r+: c++: internal compiler error: Killed (program cc1plus)
WebKit Commit Bot
Comment 3 2015-01-09 07:29:10 PST
Comment on attachment 244331 [details] patch Clearing flags on attachment: 244331 Committed r178171: <http://trac.webkit.org/changeset/178171>
WebKit Commit Bot
Comment 4 2015-01-09 07:29:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.